[project]
name = "syxel"
dynamic = ["version"]
description = "SIXEL in Python"
authors = [{name = "Luis Pedro Coelho", email = "luis@luispedro.org"}]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = ["imread"]

[project.entry-points."console_scripts"]
imcat = "syxel.imcat:main"

[tool.setuptools.dynamic]
version = {attr = "syxel.syxel_version.__version__"}

